sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:11: error: a is already defined as variable a
        var a = getValue(2)
            ^